--- a/Halloapp/fa.lproj/Localizable.strings
+++ b/Halloapp/fa.lproj/Localizable.strings
@@ -142,6 +142,9 @@
 /* Label for button that toggles speakerphone status during call */
 "call.button.speaker" = "بلندگو";
 
+/* Text indicating that calls are end-to-end encrypted */
+"call.encryption.text" = "رمزگذاری سرتاسر";
+
 /* Title for call history event. Appears next to details of a successful call. */
 "call.history.video.call" = "تماس ویدیویی";
 
@@ -421,6 +424,9 @@
 /* Title for audio post composer */
 "composer.audio.title" = "پست صوتی جدید";
 
+/* Title on edit button */
+"composer.button.edit" = "ویرایش";
+
 /* Title warning that a voice recording will be deleted */
 "composer.delete.recording.title" = "حذف پیام صوتی";
 
@@ -499,6 +505,9 @@
 /* Title for generic delete button. */
 "Delete" = "حذف";
 
+/* link, tapping on which launched the flow to edit favorites */
+"edit.favorites" = "ویرایش مخاطبین محبوب";
+
 /* Text to show on profile for users you are not connected with */
 "exchange.phone.numbers.to.connect" = "برای اشتراک گذاری باید شماره تلفن رد و بدل کنید";
 
@@ -510,6 +519,9 @@
 
 /* Description of an externally shared post containing just text */
 "externalShare.og.description.text" = "پست متنی";
+
+/* Title for posts that are externally shared, 'John Smith's HalloApp Post' */
+"externalShare.og.title3" = "پست هالواپ @%";
 
 /* VoiceOver label for camera button in floating compose post menu in Home view. */
 "fab.accessibility.camera" = "دوربین";
@@ -601,6 +613,9 @@
 /* Settings > Privacy > Posts: one of the possible setting values. */
 "feed.privacy.list.all" = "مخاطب‌های تلفن";
 
+/* Header for the list of all contacts on HallAapp. */
+"feed.privacy.list.all.details" = "مخاطبین هالواپ من";
+
 /* Settings > Privacy > Posts: one of the possible setting values. */
 "feed.privacy.list.except" = "مخاطب‌ها به جز...";
 
@@ -610,13 +625,13 @@
 /* Title for the list when selecting contacts to not share with. */
 "feed.privacy.list.except.title" = "پست‌های من را پنهان کن از...";
 
-/* Description of the alert shown to user indicating their post is only shown to their favorites audience */
+/* Description of the alert shown to user indicating the author's post is only shown to the author's favorites audience */
 "feed.privacy.list.notOwn.only.description" = "این پست فقط برای به اشتراک گذاشتن با گروه خاص از مخاطبین است. میتوانید برای تغییر آن به حریم خصوصی در تنظیمات مراجعه کنید.";
 
 /* Settings > Privacy > Posts > Favorites privacy setting. */
 "feed.privacy.list.only" = "اشتراک گذاشتن با...";
 
-/* Header for the list when selecting contacts to share with. */
+/* Header for the favorites list when editing contacts to share with. */
 "feed.privacy.list.only.details" = "انتخاب کسانی که پست شما را میبینند";
 
 /* Title of the alert shown to user indicating their post is only shown to their favorites audience */
@@ -922,6 +937,9 @@
 /* Button title. Refers to resetting photo / video to original version. */
 "media.button.reset" = "بازنشانی";
 
+/* Button title. Refers to undoing an edit of a photo. */
+"media.button.undo" = "بازگشت";
+
 /* Alert asking to enable Camera permission after attempting to use in-app camera. */
 "media.camera.access.request" = "هالواپ دسترسی به دوربین شما ندارد. برای راه‌اندازی آن، به تنظیمات بروید و دوربین را فعال کنید";
 
@@ -985,17 +1003,20 @@
 /* Message action. Verb. */
 "message.reply" = "پاسخ";
 
-/* One of the contact actions in My Post screen. */
-"mypost.action.hide.my.posts" = "پنهان کردن پست";
-
 /* One of the contact actions in My Post screen. Verb. */
 "mypost.action.message" = "پیام";
 
 /* One of the contact actions in My Post screen. */
 "mypost.action.view.profile" = "مشاهده حساب کاربری";
 
+/* Message displayed to say when posts will disappear for posts shared with contacts. */
+"mypost.contacts.disappear.time.label" = "پست شما بعد از ۳۰ روز ناپدید میشود. مخاطبین هالواپ شما میتوانند پست‌های منحل نشده شما را مشاهده کنند.";
+
 /* Generic message displayed to say when posts will disappear. */
 "mypost.disappear.time.label" = "پست‌های شما بعد از ۳۰ روز حذف خواهند شد.";
+
+/* Message displayed to say when posts will disappear for posts shared with favorites. */
+"mypost.favorites.disappear.time.label" = "پست شما با مخاطبین محبوب شما به اشتراک گذاشته شد و بعد از ۳۰ روز منحل میشود.";
 
 /* Confirmation when hiding posts from a certain contact. Parameter is contact's full name. */
 "mypost.hide.posts.confirmation" = "مطمئنید میخواهید همه پست‌های آینده را از %@ پنهان کنید؟ میتوانید بعداً آن را تغییر دهید.";
@@ -1544,6 +1565,9 @@
 /* Title for the picker screen. */
 "title.comments.picker" = "نظر جدید";
 
+/* Button to edit favorites list */
+"title.edit.favorites" = "ویرایش لیست مخاطبین محبوب‌";
+
 /* Second tab in the main app interface. */
 "title.groups" = "گروه‌ها";
 
@@ -1586,6 +1610,9 @@
 /* Informational label that's shown in the banner for an unknown contact when they message the user for the first time */
 "unknown.contact.not.in.contact.book" = "این فرستنده در لیست مخاطبین شما نیست.";
 
+/* Alert appearing after clicking an external share link that failed to load */
+"urlrouter.externalShare.failed" = "خطا در بارگذاری";
+
 /* Button to confirm blocking user via profile page */
 "user.block" = "مسدود کردن";
 
@@ -1625,6 +1652,9 @@
 /* Post deletion confirmation. Displayed as action sheet title. */
 "your.post.deletepost.confirmation" = "مطمئینید این پست را میخواهید حذف کنید؟ این کار برگشت ناپذیر است.";
 
+/* Displayed when a post fails to delete */
+"your.post.deletepost.error" = "خطا در حذف پست";
+
 /* Button to open the system share sheet with an external post link */
 "your.post.externalshare.button" = "به اشتراک گذاشتن خارج هالواپ";
 
@@ -1634,9 +1664,27 @@
 /* Success toast when external share link is copied */
 "your.post.externalshare.copylink.success" = "کپی شد";
 
+/* Message on header of post menu explaining external share */
+"your.post.externalshare.description2" = "هر شخص با این لینک میتواند پست شما را مشاهده کند. لینک‌ها بعد از انقضای پست شما منحل میشوند. پیش‌نمایش لینک کدگذاری نشده است.";
+
 /* Message that external share failed. */
 "your.post.externalshare.error" = "خطا در بارگذاری پست برای به اشتراک گذاشتن خارجی";
 
+/* Button to invalidate an external share link */
+"your.post.externalshare.revoke" = "لغو لینک";
+
+/* Message that revoking external share link failed. */
+"your.post.externalshare.revoke.error" = "خطا در لغو لینک به خاطر اشتراک خارجی";
+
+/* Notification that a link was successfully revoked */
+"your.post.externalshare.revoke.success" = "لینک لغو شد";
+
+/* Notification revoking an external share link is in progress */
+"your.post.externalshare.revoking" = "در حال لغو لینک...";
+
 /* Text introducing external share link, part of what is shared */
 "your.post.externalshare.title" = "پستمن را در هالواپ ببینید";
+
+/* Notification that post is uploading */
+"your.post.externalshare.uploading" = "ایجاد پست...";
 
