--- a/Notification Service Extension/de.lproj/Localizable.strings
+++ b/Notification Service Extension/de.lproj/Localizable.strings
@@ -85,7 +85,7 @@
 /* Describes what 'All Contacts' feed privacy setting means. */
 "feed.privacy.descr.only" = "Nur mit ausgewählten Kontakten teilen";
 
-/* Description of the alert shown to user indicating their post is only shown to their favorites audience */
+/* Description of the alert shown to user indicating the author's post is only shown to the author's favorites audience */
 "feed.privacy.list.notOwn.only.description" = "Dieser Beitrag wird nur mit einem begrenzten Benutzerkreis geteilt. Du kannst deine Zielgruppe in den Privatsphäre-Einstellungen jederzeit anpassen.";
 
 /* Title of the alert shown to user indicating their post is only shown to their favorites audience */
