--- a/Halloapp/pt-br.lproj/Localizable.strings
+++ b/Halloapp/pt-br.lproj/Localizable.strings
@@ -622,13 +622,13 @@
 /* Title for the list when selecting contacts to not share with. */
 "feed.privacy.list.except.title" = "Ocultar postagens de ...";
 
-/* Description of the alert shown to user indicating their post is only shown to their favorites audience */
+/* Description of the alert shown to user indicating the author's post is only shown to the author's favorites audience */
 "feed.privacy.list.notOwn.only.description" = "Esta postagem é compartilhada apenas com um público limitado. Você pode ajustar seu público nas configurações de privacidade a qualquer momento.";
 
 /* Settings > Privacy > Posts > Favorites privacy setting. */
 "feed.privacy.list.only" = "Compartilhar apenas com...";
 
-/* Header for the list when selecting contacts to share with. */
+/* Header for the favorites list when editing contacts to share with. */
 "feed.privacy.list.only.details" = "Selecione quem verá esta postagem";
 
 /* Title of the alert shown to user indicating their post is only shown to their favorites audience */
@@ -999,9 +999,6 @@
 
 /* Message action. Verb. */
 "message.reply" = "Responder";
-
-/* One of the contact actions in My Post screen. */
-"mypost.action.hide.my.posts" = "Ocultar minhas postagens";
 
 /* One of the contact actions in My Post screen. Verb. */
 "mypost.action.message" = "Enviar mensagem";
