--- a/Share Extension/fa.lproj/Localizable.strings
+++ b/Share Extension/fa.lproj/Localizable.strings
@@ -85,7 +85,7 @@
 /* Describes what 'All Contacts' feed privacy setting means. */
 "feed.privacy.descr.only" = "به اشتراک گذاشتن فقط با مخاطبین انتخابی";
 
-/* Description of the alert shown to user indicating their post is only shown to their favorites audience */
+/* Description of the alert shown to user indicating the author's post is only shown to the author's favorites audience */
 "feed.privacy.list.notOwn.only.description" = "این پست فقط برای به اشتراک گذاشتن با گروه خاص از مخاطبین است. میتوانید برای تغییر آن به حریم خصوصی در تنظیمات مراجعه کنید.";
 
 /* Title of the alert shown to user indicating their post is only shown to their favorites audience */
@@ -157,6 +157,9 @@
 
 /* Title of alert when user is not logged in */
 "share.notlogged.title" = "شما وارد نشده‌اید";
+
+/* Button to edit favorites list */
+"title.edit.favorites" = "ویرایش لیست مخاطبین محبوب‌";
 
 /* Row in Settings screen */
 "title.privacy" = "حریم خصوصی";
